--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,12 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: install golang-migrate
+      run: | 
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.1/migrate.darwin-amd64.tar.gz | tar xvz
+        sudo mv migrate /usr/bin
+        which migrate
+
     - name: run migrations
       run: make migrateup
 
