--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
     - name: install golang-migrate
       run: | 
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.1/migrate.darwin-amd64.tar.gz | tar xvz
-        sudo mv migrate /usr/bin
+        sudo mv migrate.darwin-amd64.tar.gz /usr/bin/migrate
         which migrate
 
     - name: run migrations
