--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,12 +29,15 @@ jobs:
           - 5432:5432
 
     steps:
-    - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.19
+        go-version: 1.15
+      id: go
+
+    - name: Check out code int Go module directory
+      uses: actions/checkout@v2
 
     - name: install golang-migrate
       run: | 
